# bookmarksync

./: .drone.yml  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  backendwidget.cpp  backendwidget.h  backendwidget.ui  bookmarksync.cpp  bookmarksync.desktop  bookmarksync.h  bookmarksync.pro  bookmarksync.ui  bookmarksyncbackend.cpp  bookmarksyncbackend.h  bookmarksyncgtkbackend.cpp  bookmarksyncgtkbackend.h  bookmarksynckdebackend.cpp  bookmarksynckdebackend.h  bookmarksyncmainwindow.cpp  bookmarksyncmainwindow.h  bookmarksyncmainwindow.ui  kdeplacefilterproxymodel.cpp  kdeplacefilterproxymodel.h  main.cpp  place.h  placeeditdialog.cpp  placeeditdialog.h  placeeditdialog.ui  placesitemmodel.cpp  placesitemmodel.h  placesitemmodeltest.cpp
debian/: changelog  control  copyright  install  rules  watch
src/: CMakeLists.txt  backendmodeltest.cpp  backendwidget.cpp  backendwidget.h  backendwidget.ui  bookmarksync.cpp  bookmarksync.h  bookmarksync.ui  bookmarksyncbackend.cpp  bookmarksyncbackend.h  bookmarksyncgenericbackend.cpp  bookmarksyncgenericbackend.h  bookmarksyncgtkbackend.cpp  bookmarksyncgtkbackend.h  bookmarksynckdebackend.cpp  bookmarksynckdebackend.h  bookmarksyncqtbackend.cpp  bookmarksyncqtbackend.h  kdeplacefilterproxymodel.cpp  kdeplacefilterproxymodel.h  main.cpp  place.h  placeeditdialog.cpp  placeeditdialog.h  placeeditdialog.ui  placesitemmodel.cpp  placesitemmodel.h  placesitemmodeltest.cpp  placesitemmodeltest.h  src.pro
test/: QtProject.conf.example  gtk-bookmarks.example  test_cli.py  user-places.xbel.example
